<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainMenuFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.example.zazeks.ui.menu.MainMenuFragment"
        android:label="@string/menu_title">
        <action
            android:id="@+id/action_mainMenuFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_mainMenuFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
    </fragment>

    <fragment
        android:id="@+id/gameFragment"
        android:name="com.example.zazeks.ui.game.GameFragment"
        android:label="@string/game_title">
        <action
            android:id="@+id/action_gameFragment_to_resultsFragment"
            app:destination="@id/resultsFragment" />
        <action
            android:id="@+id/action_gameFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment"
            app:popUpTo="@id/mainMenuFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/resultsFragment"
        android:name="com.example.zazeks.ui.results.ResultsFragment"
        android:label="@string/results_title">
        <action
            android:id="@+id/action_resultsFragment_to_gameFragment"
            app:destination="@id/gameFragment" />
        <action
            android:id="@+id/action_resultsFragment_to_mainMenuFragment"
            app:destination="@id/mainMenuFragment"
            app:popUpTo="@id/mainMenuFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
